src/test/ui/coherence/coherence-projection-conflict-orphan.stderr
error[E0119]: conflicting implementations of trait `Foo<i32>` for type `i32`
  --> $DIR/coherence-projection-conflict-orphan.rs:16:1
   |
LL | impl Foo<i32> for i32 { }
   | --------------------- first implementation here
LL | 
LL | impl<A:Iterator> Foo<A::Item> for A { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `i32`
   |
   = note: upstream crates may add a new impl of trait `std::iter::Iterator` for type `i32` in future versions
   = note: upstream crates may add a new impl of trait `std::iter::Iterator` for type `i32` in future versions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
